# infinity_station

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt
src/controllers/unit_test/hzk_ctls/: CMakeLists.txt  DeviceInfoController.cpp  DeviceInfoController.h  HttpController.cpp  HttpController.h  TestController.cpp  TestController.h  TestDatabase.cpp  TestDatabase.h
src/controllers/unit_test/hzy_ctls/: CMakeLists.txt
src/controllers/unit_test/yjy_ctls/: CMakeLists.txt  TestCudaController.cpp  TestCudaController.h
src/controllers/unit_test/zdt_ctls/: CMakeLists.txt
src/controllers/unit_test/zzh_ctrls/: CMakeLists.txt
src/kits/3d_camera_service/: CMakeLists.txt  CameraServer3D.cpp  CameraServer3D.h
src/kits/3d_camera_service/factory/: Camera3DFactory.cpp  Camera3DFactory.h  Camera3DInterface.h  Sick3DCamera.cpp  Sick3DCamera.h
src/kits/algorithm/algo_guiyangs1/: AlgorithmGuiyang.cpp  AlgorithmGuiyang.h  CMakeLists.txt
src/kits/camera/: Readme.txt
src/kits/camera/hik/: ReadMe.txt
src/kits/camera/tools/: CMakeLists.txt  LocationCtrl.cpp  LocationCtrl.h
src/kits/camera_manager/: CMakeLists.txt  CameraFactoryManager.cpp  CameraFactoryManager.h  CameraManager.h
src/kits/camera_manager/baumer/: BaumerCamera.cpp  BaumerCamera.h  BaumerManager.cpp  BaumerManager.h
src/kits/camera_service/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraFactory.cpp  CameraFactory.h  ImgChannel.h  SaveVideo.cpp  SaveVideo.h  SaveVideoBase.cpp  SaveVideoBase.h  SaveVideoCache.cpp  SaveVideoCache.h  encodevideo.cpp  encodevideo.h  encodevideoffmpeg.cpp  encodevideoffmpeg.h  muxingvideo.cpp  muxingvideo.h
src/kits/camera_service/basler/: CMakeLists.txt  CameraBasler.cpp  CameraBasler.h
src/kits/camera_service/baumer/: CameraBaumer.cpp  CameraBaumer.h  CameraBumerManager.cpp  (+2 more)
src/kits/cuda/: CMakeLists.txt  YuvConverter.cpp  YuvConverter.h  YuvConverterImpl.cu  YuvConverterImpl.cuh
src/kits/yanyan/: CMakeLists.txt  YanYanDeviceByMFC.cpp  YanYanDeviceByMFC.h
src/modules/: CMakeLists.txt
src/modules/arc_service/: CMakeLists.txt  arcuv_service.cpp  arcuv_service.h
src/modules/basler_manager/: BaslerManager.cpp  BaslerManager.h  CMakeLists.txt
src/modules/baumer_manager/: BaumerManager.cpp  BaumerManager.h  CMakeLists.txt
src/modules/camera_user/: CMakeLists.txt  CameraCtrl.cpp  CameraCtrl.h  CameraUser.cpp  CameraUser.h  DetectCtrl.cpp  DetectCtrl.h  LocationCtrl.cpp  LocationCtrl.h
src/modules/collect_dev_service/: CMakeLists.txt  CollectService.cpp  CollectService.h
src/modules/connectivity_service/: CMakeLists.txt  ConnectivityService.cpp  ConnectivityService.h
src/modules/corrugation_service/: CMakeLists.txt  CorrugationService.cpp  CorrugationService.h
src/modules/database_manager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
src/modules/dispatch_6017/: CMakeLists.txt  Dispatch6017.cpp  Dispatch6017.h
src/modules/drop_trigger_show/: CMakeLists.txt  DropTriggerServer.cpp  DropTriggerServer.h
src/modules/dwc_data_dispatch/: CMakeLists.txt  DwcDataDispatch.cpp  DwcDataDispatch.h
src/modules/fileSystemSend/: FileSysWatcher.cpp  FileSysWatcher.h
src/modules/hardware_manager/: CMakeLists.txt  HardwareManager.cpp  HardwareManager.h
src/modules/hik_manager/: CMakeLists.txt  HikManager.cpp  HikManager.h
src/modules/histroy_program_comm/: CMakeLists.txt  DBCommunicationHandle.cpp  DBCommunicationHandle.h  HistroyProgramComm.cpp  HistroyProgramComm.h  MvbCommunicationHandle.cpp  MvbCommunicationHandle.h  TaskCommunicationHandle.cpp  TaskCommunicationHandle.h
src/modules/http_service/: CMakeLists.txt  HttpService.cpp  HttpService.h
src/modules/jihe_service/: CMakeLists.txt  JiHeDataBaseOpt.cpp  JiHeDataBaseOpt.h  JiHeService.cpp  JiHeService.h
src/modules/jihetrigger_service/: CMakeLists.txt  JCWDataDef.h  JiHeTriggerService.cpp  JiHeTriggerService.h
src/modules/live_nvr_service/: CMakeLists.txt  LiveNvrService.cpp  LiveNvrService.h
src/modules/location_service/: CMakeLists.txt  LocationService.cpp  LocationService.h
src/modules/mvb_data_switch/: CMakeLists.txt  MVBDataSwitch.cpp  MVBDataSwitch.h
src/modules/mvb_distribution/: CMakeLists.txt  MVBDistribution.cpp  MVBDistribution.h
src/modules/mvb_msg_forward/: CMakeLists.txt  MVBMsgForward.cpp  MVBMsgForward.h
src/modules/mvb_service/: CMakeLists.txt  MVBService.cpp  MVBService.h
src/modules/netcam_service/: CMakeLists.txt  NetcamService.cpp  NetcamService.h
src/modules/pressure_spot_service/: CMakeLists.txt  PressureSpotServer.cpp  PressureSpotServer.h
src/modules/qml_engine/: CMakeLists.txt  QmlPrivateEngine.cpp  QmlPrivateEngine.h
src/modules/radar_offline/: CMakeLists.txt  OfflineDateStatistic.cpp  OfflineDateStatistic.h  OfflineRadarService.cpp  OfflineRadarService.h  OfflineSqlOp.cpp  OfflineSqlOp.h
src/modules/radar_online/: CMakeLists.txt  RadarOverrun.cpp  RadarOverrun.h  RadarRecord.cpp  RadarRecord.h  RadarService.cpp  RadarService.h
src/modules/remote_access/: CMakeLists.txt  RemoteAccess.cpp  RemoteAccess.h
src/modules/rfid_recv_service/: CMakeLists.txt  RfidRecvService.cpp  RfidRecvService.h
src/modules/rossek_service/: CMakeLists.txt  RossekSeverService.cpp  RossekSeverService.h
src/modules/task_service/: CMakeLists.txt  PreviousTaskCtrl.cpp  PreviousTaskCtrl.h  TaskService.cpp  TaskService.h  sqlIo.cpp  sqlIo.h
src/modules/tcp_client_center/: CMakeLists.txt  TcpClientCenter.cpp  TcpClientCenter.h
src/modules/tcp_server_center/: CMakeLists.txt  TcpServerCenter.cpp  TcpServerCenter.h
src/modules/temperature_service/: CMakeLists.txt  TemperatureService.cpp  TemperatureService.h
src/modules/udp_center/: CMakeLists.txt  UdpCenter.cpp  UdpCenter.h
src/modules/yanyan_data_collect/: CMakeLists.txt  YanYanDataCollect.cpp  YanYanDataCollect.h
src/service/: AppDeclare.h  AppFramework.h  AppFrameworkImpl.cpp  AppFrameworkImpl.h  CMakeLists.txt
src/tis_global/: EnumClass.h  EnumPublic.h  Field.h  Struct.h
src/tis_version_cmake/: 0_DEV_HZK_VERSION.cmake
(+411 files in other folders)
